fix with latest changes

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,34 +1,15 @@
 <single-spa-router>
-  <!--
-
-    This is the single-spa Layout Definition for your microfrontends.
-    See https://single-spa.js.org/docs/layout-definition/ for more information.
-
-  -->
-
-  <!-- Example layouts you might find helpful:
-
-  <nav>
-    <application name="@org/navbar"></application>
-  </nav>
-  <route path="settings">
-    <application name="@org/settings"></application>
-  </route>
-
-  -->
-
   <main>
     <nav>
-      <div><a href="/hacker-news">hacker news</a></div>
-      <div><a href="/books-store">books store</a></div>
+      <application name="@guille/navbar"></application>
     </nav>
     <route default>
+      <application name="@guille/home-mfe"></application>
+    </route>
+    <route path="root-mfe/hacker-news">
       <application name="@guille/mfe"></application>
     </route>
-    <route path="hacker-news">
-      <application name="@guille/mfe"></application>
-    </route>
-    <route path="books-store">
+    <route path="root-mfe/books-store">
       <application name="@guille/bookstore-mfe"></application>
     </route>
   </main>
