update news-reader mfe naming

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -6,8 +6,8 @@
     <route default>
       <application name="@guille/home-mfe"></application>
     </route>
-    <route path="root-mfe/hacker-news">
-      <application name="@guille/mfe"></application>
+    <route path="root-mfe/tech-news-reader">
+      <application name="@guille/tech-news-reader"></application>
     </route>
     <route path="root-mfe/books-store">
       <application name="@guille/bookstore-mfe"></application>
