--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@17.0.2/umd/react-dom.production.min.js",
         "single-spa-react": "https://cdn.jsdelivr.net/npm/single-spa-react@4.6.0/lib/system/single-spa-react.min.js",
         "styled-components": "https://cdn.jsdelivr.net/npm/styled-components@5.3.3/dist/styled-components.min.js",
+        "react-is": "https://cdn.jsdelivr.net/npm/react-is@16.13.1/umd/react-is.production.min.js",
         "@guille/root-config": "https://guille-gallo.github.io/root-mfe/guille-root-config.js",
         "@guille/home-mfe": "https://guille-gallo.github.io/home-mfe/guille-home.js",
         "@guille/navbar": "https://guille-gallo.github.io/navbar-mfe/guille-navbar.js",
